crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__codex__tool-run.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- ModelInfo:
    agent_id: 6841381709280743575
    model: gpt-5.5
    effort: medium
- ActivityStart:
    agent_id: 6841381709280743575
    tool_use_id: ~
    detail: ~
- ActivityStart:
    agent_id: 6841381709280743575
    tool_use_id: ~
    detail:
      Generic:
        display: exec_command
- ActivityStart:
    agent_id: 6841381709280743575
    tool_use_id: ~
    detail: ~
- TurnComplete:
    agent_id: 6841381709280743575
- SessionStart:
    agent_id: 6841381709280743575
    source: codex
    session_id: 01000000-0000-7000-8000-000000000002
    cwd: /home/user/demo-project
    parent_id: ~
- ActivityEnd:
    agent_id: 6841381709280743575
    tool_use_id: ~
